--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;div id="photo-page" class="card"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;h1&gt;Happy Valentine's Day!&lt;/h1&gt;</p>
-<p class="p1"><span class="Apple-converted-space">        </span>&lt;img src=“rishi.jpg” alt="Us" class="couple-photo"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">        </span>&lt;<img src="rishi.jpg" alt="Us" class="couple-photo">&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;Every moment with you is my favorite. ❤️&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/div&gt;</p>
 <p class="p2"><br></p>
