--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <button class="btn" onclick="showPhoto()">Click to Open 🎁</button>
     </div>
     <div id="photo-page" class="card">
-        <h1>I Love Us!</h1>
+        <h1>I LOVE YOU!</h1>
         <img src="rishi.jpg" alt="Us" class="couple-photo">
-        <p>You make every day better. ❤️</p>
+        <p>You're my favorite❤️</p>
     </div>
     <script>
         function showPhoto() {
